wrapping fixes

--- a/frontend/rucores/src/wallets/walletManager.css
+++ b/frontend/rucores/src/wallets/walletManager.css
@@ -12,6 +12,7 @@
 
 .SelectSpacer{
     width:930px;
+    overflow-wrap:anywhere;
 }
 
 .walletName{
